# loxc

./: CMakeLists.txt  CMakePresets.json  README.md  meson.build
.zed/: debug.json
include/: chunk.h  common.h  compiler.h  debug.h  memory.h  scanner.h  value.h  vm.h
src/: chunk.c  compiler.c  debug.c  main.c  memory.c  scanner.c  value.c  vm.c
